Larger & Draggable UI

--- a/betterstorage/ui/stockpile.less
+++ b/betterstorage/ui/stockpile.less
@@ -1,16 +1,21 @@
 #stockpileWindow {
    position: absolute;
-   left: 20px;
    top: 200px;
+   left: 20px;
 
+   .title {
+      .handCursor
+   }
+   
    .window {
-      width: 570px;
-      height: 515px;
+      width: 750px;
+      height: 650px;
+      position: relative;
    }
 
    .tabPage {
       display: none;
-      height: 380px;
+      height: 515px;
       margin-bottom: 4px;
       margin-top: 10px;
    }
@@ -23,7 +28,7 @@
       .downSection {
          overflow-y: auto;
          overflow-x: hidden;
-         height: 302px;
+         height: 437px;
       }
 
       #taxonomyGrid {
