--- a/betterstorage/ui/stockpile.less
+++ b/betterstorage/ui/stockpile.less
@@ -137,6 +137,7 @@
          max-width: 170px;
          padding-right: 15px;
          line-height: 64px;
+         white-space: nowrap;
       }
    }
 }
